// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeProvider can configure cacheOptions 1`] = `
.emotion-0 {
  color: tomato;
}

<div
  className="emotion-0"
/>
`;

exports[`ThemeProvider renders 1`] = `
<h1>
  Hello
</h1>
`;

exports[`jsx custom pragma handles null props 1`] = `
<h1>
  hello
</h1>
`;
